added game_load test in CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,7 @@ add_test(testv2_undo_redo_all ./game_test "undo_redo_all")
 add_test(testv2_restart_undo ./game_test "restart_undo")
 
 add_test(test_game_save ./game_test "game_save")
+add_test(test_game_load ./game_test "game_load")
 
 #############################  #############################
 
