--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,7 +94,7 @@ add_test(test_game_solve ./game_test "game_solve")
 add_test(test_game_nb_solutions ./game_test "game_nb_solutions")
 
 ## copy useful data files in build dir
-foreach(file "ressources/fire.png" "ressources/digit0.png" "ressources/digit1.png" "ressources/digit2.png" "ressources/digit3.png" "ressources/digit4.png" "ressources/colon.png")
+foreach(file "ressources/fire.png" "ressources/forward_arrow.bmp" "ressources/back_arrow.bmp" "ressources/repeat_arrow.bmp")
   file(COPY ${file} DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 endforeach(data_file)
 #############################  #############################
